src/parser/grammar/test_samples/constructors/invalid/constructor_with_return_value.5th
// INVALID: Constructor returning a value
class Person {
    Name: string;
    
    Person(name: string) {
        this.Name = name;
        return name;
    }
}

main(): int {
    return 0;
}
